[package]
name = "piske"
version = "0.1.0"
authors = ["Jamie Blondin <jblondin@gmail.com>"]
build = "build.rs"

[build-dependencies]
peg = { path = "../rust-peg" }

[dependencies]
sindra = { path = "../sindra" }
regex = "0.2"
lazy_static = "0.2"
rustyline = { git = "https://github.com/kkawakam/rustyline" }
clap = "2.19.0"
quote = "0.3"
psk_std = { path = "psk_std" }

[dev-dependencies]
tempfile = "2.2.0"
